added bar to the home screen

--- a/styles.css
+++ b/styles.css
@@ -21,4 +21,9 @@ navbar{margin-bottom:50px;}
 main{margin-top: 60px;}
 
 
-change to body color-
+
+.progress{border:15px;}
+
+.space{margin:10px;}
+
+
