--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 .green{color:#1c593f ;}
 
-h1{padding-top:70px; text-align: center;  font-family: 'Josefin Sans', sans-serif; color:#0b2218;}
-h2{font-size: 40px; font-family: 'Josefin Sans', sans-serif;}
+h1{padding-top:70px; text-align: center;  font-family: 'Josefin Sans', sans-serif; color:darkgreen;}
+h2{font-size: 40px; font-family: 'Josefin Sans', sans-serif; }
 h3{font-family: 'Josefin Sans', sans-serif;}
 h4{font-family: 'Josefin Sans', sans-serif;}
 h5{font-family: 'Josefin Sans', sans-serif;}
