--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,8 @@ main{margin-top: 60px;}
 .calcustom{color:#fff2cc;}
 
 .row-custom{ background-color:#fff2cc;}
-footer{padding-top:50px;}
+footer{padding-top:50px;
+        }
 
 .darkgreen{color:#0b2218;}
 container{padding: 50px;}
