--- a/GeneralMaster.Master
+++ b/GeneralMaster.Master
@@ -4,7 +4,21 @@
 
 <html>
 <head runat="server">
-    <title></title>
+   
+		<meta charset="UTF-8">
+		<meta name="description" content="Description of this web site">
+	  	<meta name="author" content="Christy Marchand">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Log In- Green Valley Auctions</title>
+
+		<!-- Bootstrap v5.0.0-beta1 -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+		<link href="css/custom.css" rel="stylesheet" type="text/css">
+          <link href="styles.css" rel="stylesheet" type="text/css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
+
+
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 
@@ -23,5 +37,9 @@
             </asp:ContentPlaceHolder>
         </div>
   </form>
+    <script src="Scripts/jquery-3.5.1.min.js"></script>
+    <script src="Scripts/popper.min.js"></script>
+    <script src="Scripts/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
