--- a/GeneralMaster.Master
+++ b/GeneralMaster.Master
@@ -24,15 +24,22 @@
 
 </head>
 <body>
+
+    <nav class="nav navbar navbar-expand-lg navbar-custom fixed-top shadow-sm" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand js-scroll-trigger" href="empdashboard.html">
+                <img src="images/header-logo.png"></a>
+        </div>
+    </nav>
      <form id="form1" runat="server">
         <div>
-            <asp:Table ID="tblHeader" runat="server" Height="132px" Width="113px">
+            <%--<asp:Table ID="tblHeader" runat="server" Height="132px" Width="113px">
                 <asp:TableRow>
                     <asp:TableCell>
                         <asp:ImageButton ID="imgBtnLogo" runat="server"  ImageUrl="/GVAImages/GVALogo_Gold.jpg" OnClick="imgBtnLogo_Click" Width="276px" Height="153px"/>
                     </asp:TableCell>
                 </asp:TableRow>
-            </asp:Table>
+            </asp:Table>--%>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
         </div>
