--- a/styles.css
+++ b/styles.css
@@ -78,8 +78,7 @@ main {
 @media (max-width:100px) {
     .display-4
 
-{
-    font-size: 1.5rem;
+{ font-size: 1.5rem;
     font-family: 'Josefin Sans', sans-serif;
 }
 
